Use windows with tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,21 +1,25 @@
 set-window-option -g utf8 on
 set-window-option -g mode-keys vi
 set -sg escape-time 0
+set -g history-limit 1000000
 
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-unbind C-b
 set -g prefix C-a
 
 bind C-v split-window -h
 bind C-s split-window -v
 bind C-w select-pane -t :.+
 
-#set-option -g pane-active-border-fg magenta
-set -g status off
+set -g status on
+set -g status-fg white
+set -g status-utf8 on
+set -g status-left ''
+set -g status-right ''
+set -g window-status-current-attr bright
 
 set-option -g set-titles on
 
