Integrate vim + tmux + zsh triunvirate
Fix terminal and colors issue with vim and tmux
Order the zsh file

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,10 +3,10 @@ set-window-option -g mode-keys vi
 set -sg escape-time 0
 set -g history-limit 1000000
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind C-h select-pane -L
+bind C-j select-pane -D
+bind C-k select-pane -U
+bind C-l select-pane -R
 
 set -g prefix C-a
 
