Use oh-my-zshrc tmux plugin

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,18 +1,20 @@
-set-window-option -g utf8 on
-set-window-option -g mode-keys vi
-set -sg escape-time 0
+setw -g utf8 on
+setw -g mode-keys vi
+setw -g monitor-activity on
+
+set -sg escape-time 1
 set -g history-limit 1000000
+
+set -g prefix C-a
+bind C-a send-prefix
+
+bind C-v split-window -h
+bind C-s split-window -v
 
 bind C-h select-pane -L
 bind C-j select-pane -D
 bind C-k select-pane -U
 bind C-l select-pane -R
-
-set -g prefix C-a
-
-bind C-v split-window -h
-bind C-s split-window -v
-bind C-w select-pane -t :.+
 
 set -g status on
 set -g status-fg white
