--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 setw -g utf8 on
 setw -g mode-keys vi
 setw -g monitor-activity on
+setw -g aggressive-resize on
 
 set -sg escape-time 1
 set -g history-limit 1000000
@@ -20,7 +21,7 @@ set -g status on
 set -g status-fg white
 set -g status-utf8 on
 set -g status-left ''
-set -g status-right ''
+set -g status-right '%H:%M %d-%b-%y'
 set -g window-status-current-attr bright
 
 set-option -g set-titles on
