--- a/tmux.conf
+++ b/tmux.conf
@@ -18,11 +18,7 @@ bind C-k select-pane -U
 bind C-l select-pane -R
 
 set -g status on
-set -g status-fg white
 set -g status-utf8 on
-set -g status-left ''
-set -g status-right '%H:%M %d-%b-%y'
-set -g window-status-current-attr bright
 
 set-option -g set-titles on
 
@@ -32,3 +28,29 @@ set -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
+
+set -g status-bg "colour7"
+set -g message-command-fg "colour7"
+set -g status-justify "left"
+set -g status-left-length "100"
+set -g status "on"
+set -g pane-active-border-fg "colour11"
+set -g message-bg "colour14"
+set -g status-right-length "100"
+set -g status-right-attr "none"
+set -g message-fg "colour7"
+set -g message-command-bg "colour14"
+set -g status-attr "none"
+set -g pane-border-fg "colour14"
+set -g status-left-attr "none"
+setw -g window-status-fg "colour14"
+setw -g window-status-attr "none"
+setw -g window-status-activity-bg "colour7"
+setw -g window-status-activity-attr "none"
+setw -g window-status-activity-fg "colour11"
+setw -g window-status-separator ""
+setw -g window-status-bg "colour7"
+set -g status-left "#[fg=colour7,bg=colour11,bold] #S #[fg=colour11,bg=colour7,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour14,bg=colour7,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour14] %d-%m-%Y | %H:%M #[fg=colour11,bg=colour14,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour11] #h "
+setw -g window-status-format "#[fg=colour14,bg=colour7]#I | #[fg=colour14,bg=colour7]#W "
+setw -g window-status-current-format "#[fg=colour7,bg=colour14,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour14]#I | #[fg=colour7,bg=colour14]#W #[fg=colour14,bg=colour7,nobold,nounderscore,noitalics]"
