--- a/tmux.conf
+++ b/tmux.conf
@@ -29,28 +29,31 @@ set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
 
-set -g status-bg "colour7"
+
+set -g status-bg "colour0"
 set -g message-command-fg "colour7"
 set -g status-justify "left"
 set -g status-left-length "100"
 set -g status "on"
-set -g pane-active-border-fg "colour11"
-set -g message-bg "colour14"
+set -g pane-active-border-fg "colour14"
+set -g message-bg "colour11"
 set -g status-right-length "100"
 set -g status-right-attr "none"
 set -g message-fg "colour7"
-set -g message-command-bg "colour14"
+set -g message-command-bg "colour11"
 set -g status-attr "none"
-set -g pane-border-fg "colour14"
+set -g status-utf8 "on"
+set -g pane-border-fg "colour11"
 set -g status-left-attr "none"
-setw -g window-status-fg "colour14"
+setw -g window-status-fg "colour10"
 setw -g window-status-attr "none"
-setw -g window-status-activity-bg "colour7"
+setw -g window-status-activity-bg "colour0"
 setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "colour11"
+setw -g window-status-activity-fg "colour14"
 setw -g window-status-separator ""
-setw -g window-status-bg "colour7"
-set -g status-left "#[fg=colour7,bg=colour11,bold] #S #[fg=colour11,bg=colour7,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour14,bg=colour7,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour14] %d-%m-%Y | %H:%M #[fg=colour11,bg=colour14,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour11] #h "
-setw -g window-status-format "#[fg=colour14,bg=colour7] #I | #[fg=colour14,bg=colour7]#W "
-setw -g window-status-current-format "#[fg=colour7,bg=colour14,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour14]#I | #[fg=colour7,bg=colour14]#W #[fg=colour14,bg=colour7,nobold,nounderscore,noitalics]"
+setw -g window-status-bg "colour0"
+
+set -g status-left "#[fg=colour15,bg=colour14,bold] #S #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour11] %d-%m-%Y | %H:%M #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics] #[fg=colour15,bg=colour14] #h "
+setw -g window-status-format "#[fg=colour10,bg=colour0] #I | #[fg=colour10,bg=colour0]#W "
+setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour11]#I | #[fg=colour7,bg=colour11]#W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]"
