--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,8 @@
-setw -g utf8 on
 setw -g mode-keys vi
 setw -g monitor-activity on
-setw -g aggressive-resize on
+set -g focus-events on
 
-set -sg escape-time 1
+set -sg escape-time 0
 set -g history-limit 1000000
 
 set -g prefix C-a
@@ -18,12 +17,10 @@ bind C-k select-pane -U
 bind C-l select-pane -R
 
 set -g status on
-set -g status-utf8 on
 
 set-option -g set-titles on
 
 set -g default-terminal "screen-256color"
-
 
 set -g status-bg "colour0"
 set -g message-command-fg "colour7"
@@ -37,7 +34,6 @@ set -g status-right-attr "none"
 set -g message-fg "colour7"
 set -g message-command-bg "colour11"
 set -g status-attr "none"
-set -g status-utf8 "on"
 set -g pane-border-fg "colour11"
 set -g status-left-attr "none"
 setw -g window-status-fg "colour10"
@@ -52,3 +48,5 @@ set -g status-left "#[fg=colour15,bg=colour14,bold] #S #[fg=colour14,bg=colour0,
 set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour11] %d-%m-%Y | %H:%M #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics] #[fg=colour15,bg=colour14] #h "
 setw -g window-status-format "#[fg=colour10,bg=colour0] #I | #[fg=colour10,bg=colour0]#W "
 setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour11]#I | #[fg=colour7,bg=colour11]#W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]"
+
+setw -g aggressive-resize on
