--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,9 @@ setw -g mode-keys vi
 setw -g monitor-activity on
 set -g focus-events on
 
+set -g base-index 1
+setw -g pane-base-index 1
+
 set -sg escape-time 0
 set -g history-limit 1000000
 
