--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "base16-shell"]
-	path = base16-shell/.config7base16-shell
+[submodule "base16/.config/base16-shell"]
+	path = base16/.config/base16-shell
 	url = https://github.com/chriskempson/base16-shell.git
