--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "base16/.config/base16-shell"]
-	path = base16/.config/base16-shell
-	url = https://github.com/chriskempson/base16-shell.git
 [submodule "vim/.vim/vim-plug"]
 	path = vim/.vim/vim-plug
 	url = https://github.com/junegunn/vim-plug.git
@@ -19,3 +16,6 @@
 [submodule "zsh/.zsh/zsh-history-substring-search"]
 	path = zsh/.zsh/zsh-history-substring-search
 	url = https://github.com/zsh-users/zsh-history-substring-search.git
+[submodule "konsole/.local/share/konsole"]
+	path = konsole/.local/share/konsole
+	url = https://github.com/dracula/konsole.git
