--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,6 +24,7 @@ set -g status on
 set-option -g set-titles on
 
 set -g default-terminal "screen-256color"
+set -g terminal-overrides ',xterm-256color:Tc'
 
 set -g status-bg "colour18"
 set -g message-command-fg "colour7"
