--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "konsole-dracula/.local/share/konsole"]
 	path = konsole-dracula/.local/share/konsole
 	url = https://github.com/dracula/konsole.git
+[submodule "base16/.config/base16-shell"]
+	path = base16/.config/base16-shell
+	url = https://github.com/chriskempson/base16-shell.git
