Use TPM and Nord as colorscheme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,51 +1,16 @@
-setw -g mode-keys vi
-setw -g monitor-activity on
-set -g focus-events on
-
-set -g base-index 1
-setw -g pane-base-index 1
-
-set -sg escape-time 0
-set -g history-limit 1000000
-
 set -g prefix C-a
 bind C-a send-prefix
 
-bind C-v split-window -h
-bind C-s split-window -v
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin "arcticicestudio/nord-tmux"
 
-bind C-h select-pane -L
-bind C-j select-pane -D
-bind C-k select-pane -U
-bind C-l select-pane -R
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
 
-set -g status on
-
-set-option -g set-titles on
-
-set -g default-terminal "screen-256color"
-set -g terminal-overrides ',xterm-256color:Tc'
-setw -g aggressive-resize on
-
-set -g status-justify "left"
-set -g status "on"
-set -g status-style "none"
-set -g message-command-style bg="colour19"
-set -g status-left-length "100"
-set -g pane-active-border-style fg="colour4"
-set -g status-bg "colour18"
-set -g message-command-style fg="colour7"
-set -g pane-border-style fg="colour19"
-set -g message-style bg="colour19"
-set -g status-left-style "none"
-set -g status-right-style "none"
-set -g status-right-length "100"
-set -g message-style fg="colour7"
-setw -g window-status-style  fg="colour7","none"
-setw -g window-status-activity-style bg="colour18",fg="colour4","none"
-setw -g window-status-separator ""
-setw -g window-status-style bg="colour18"
-set -g status-left "#[fg=colour18,bg=colour4,bold] #S #[fg=colour4,bg=colour18,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour19,bg=colour18,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour19] %Y-%m-%d | %H:%M #[fg=colour4,bg=colour19,nobold,nounderscore,noitalics] #[fg=colour18,bg=colour4] #h "
-setw -g window-status-format "#[fg=colour7,bg=colour18] #I #[fg=colour7,bg=colour18] #W "
-setw -g window-status-current-format "#[fg=colour18,bg=colour19,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour19] #I #[fg=colour7,bg=colour19] #W #[fg=colour19,bg=colour18,nobold,nounderscore,noitalics]"
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
