--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,6 @@
 [submodule "zsh/.zsh/zsh-history-substring-search"]
 	path = zsh/.zsh/zsh-history-substring-search
 	url = https://github.com/zsh-users/zsh-history-substring-search.git
-[submodule "base16/.config/base16-shell"]
-	path = base16/.config/base16-shell
-	url = https://github.com/chriskempson/base16-shell.git
+[submodule "tmux/.tmux/plugins/tpm"]
+	path = tmux/.tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm
