--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,8 @@
 set -g prefix C-a
 bind C-a send-prefix
 
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
