--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "tmux/.tmux/plugins/tpm"]
 	path = tmux/.tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
+[submodule "zsh/.zsh/base16-shell"]
+	path = zsh/.zsh/base16-shell
+	url = https://github.com/chriskempson/base16-shell.git
