--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,7 +20,7 @@ setw -g window-status-style "none,fg=colour7,bg=colour18"
 set -g status-left "#[fg=colour18,bg=colour4,bold] #S #[fg=colour4,bg=colour18,nobold,nounderscore,noitalics]"
 set -g status-right "#[fg=colour19,bg=colour18,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour19] %Y-%m-%d  %H:%M #[fg=colour4,bg=colour19,nobold,nounderscore,noitalics]#[fg=colour18,bg=colour4] #h "
 setw -g window-status-format "#[fg=colour7,bg=colour18] #I #[fg=colour7,bg=colour18] #W "
-setw -g window-status-current-format "#[fg=colour18,bg=colour19,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour19] #I #[fg=colour7,bg=colour19] #W #[fg=colour19,bg=colour18,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=colour18,bg=colour08,bold,nounderscore,noitalics]#[fg=colour7,bg=colour08] #I #[fg=colour7,bg=colour08] #W #[fg=colour08,bg=colour18,nobold,nounderscore,noitalics]"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
