--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,30 +2,22 @@ set -g prefix C-a
 bind C-a send-prefix
 
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-set -g status-justify "left"
-set -g status "on"
-set -g status-left-style "none"
-set -g message-command-style "fg=colour7,bg=colour19"
-set -g status-right-style "none"
-set -g pane-active-border-style "fg=colour4"
-set -g status-style "none,bg=colour18"
-set -g message-style "fg=colour7,bg=colour19"
-set -g pane-border-style "fg=colour19"
-set -g status-right-length "100"
-set -g status-left-length "100"
-setw -g window-status-activity-style "none"
-setw -g window-status-separator ""
-setw -g window-status-style "none,fg=colour7,bg=colour18"
-set -g status-left "#[fg=colour18,bg=colour4,bold] #S #[fg=colour4,bg=colour18,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour19,bg=colour18,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour19] %Y-%m-%d  %H:%M #[fg=colour4,bg=colour19,nobold,nounderscore,noitalics]#[fg=colour18,bg=colour4] #h "
-setw -g window-status-format "#[fg=colour7,bg=colour18] #I #[fg=colour7,bg=colour18] #W "
-setw -g window-status-current-format "#[fg=colour18,bg=colour08,bold,nounderscore,noitalics]#[fg=colour7,bg=colour08] #I #[fg=colour7,bg=colour08] #W #[fg=colour08,bg=colour18,nobold,nounderscore,noitalics]"
+set -g default-terminal "screen-256color"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'dracula/tmux'
+
+set -g @dracula-plugins "time"
+set -g @dracula-show-powerline true
+set -g @dracula-show-left-icon session
+set -g @dracula-left-icon-padding 0
+
+set -g @dracula-day-month true
+set -g @dracula-show-timezone false
+set -g @dracula-military-time true
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
