--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,7 +12,7 @@ set -g @plugin 'dracula/tmux'
 
 set -g @dracula-plugins "time"
 set -g @dracula-show-powerline true
-set -g @dracula-show-left-icon session
+set -g @dracula-show-left-icon smiley
 set -g @dracula-left-icon-padding 0
 
 set -g @dracula-day-month true
