--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -6,10 +6,11 @@ color-modes = true
 idle-timeout = 150
 rulers = [80,100]
 bufferline = "always"
+auto-pairs = false
 
 [editor.statusline]
 left = ["mode", "spinner"]
-center = ["file-name"]
+center = ["version-control", "file-name"]
 right = ["diagnostics", "selections", "position", "file-encoding", "file-type"]
 separator = "│"
 mode.normal = "NORMAL"
@@ -18,6 +19,7 @@ mode.select = "SELECT"
 
 [editor.lsp]
 display-messages = true
+display-inlay-hints = true
 
 [editor.cursor-shape]
 insert = "bar"
@@ -26,3 +28,6 @@ insert = "bar"
 space = "none"
 tab = "all"
 newline = "all"
+
+[editor.soft-wrap]
+enable = true
