Add some aliases to speedup things

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -17,3 +17,15 @@
 [credential "https://gist.github.com"]
 	helper =
 	helper = !/usr/bin/gh auth git-credential
+[alias]
+	st = status
+	co = checkout
+	ci = commit
+	cob = checkout -b
+	del = branch -D
+	br = branch --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(contents:subject) %(color:green)(%(committerdate:relative)) [%(authorname)]' --sort=-committerdate
+	save = !git add -A && git commit -m 'chore: savepoint'
+	undo = reset HEAD~1 --mixed
+	res = !git reset --hard
+	done = !git push origin HEAD
+	lg = !git log --pretty=format:\"%C(magenta)%h%Creset -%C(red)%d%Creset %s %C(dim green)(%cr) [%an]\" --abbrev-commit -30
