--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,6 @@
 font-family = "JetBrains Mono"
-font-style = "Regular"
+font-style = "Medium"
 font-size = 15
-theme = "catppuccin-mocha"
+theme = "light:tokyonight-day,dark:tokyonight-storm"
 window-decoration = false
+unfocused-split-opacity = 0.9
