--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,6 @@
 font-family = "JetBrains Mono"
 font-style = "Medium"
 font-size = 15
-theme = "light:tokyonight-day,dark:tokyonight-storm"
+theme = "light:catppuccin-latte,dark:catppuccin-frappe"
 window-decoration = false
 unfocused-split-opacity = 0.9
