--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,6 @@
 font-family = "JetBrains Mono"
-font-style = "Medium"
+font-style = "Regular"
 font-size = 15
 theme = "light:catppuccin-latte,dark:catppuccin-frappe"
-window-decoration = false
+gtk-titlebar = false
 unfocused-split-opacity = 0.9
