change: Adapt to latest Ghostty and NVim changes

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,6 @@
 font-family = "JetBrains Mono"
 font-style = "Regular"
 font-size = 15
-theme = "tokyonight_moon"
+theme = "TokyoNight Moon"
 gtk-titlebar = false
 unfocused-split-opacity = 0.9
